--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <link rel="stylesheet" href="todo.css">
-  <title>Todo App</title>
+  <title>TodoList App</title>
 </head>
 <body>
 <h1 id="main-heading">Todo App</h1>
